--- a/_config.yml
+++ b/_config.yml
@@ -264,3 +264,6 @@ defaults:
       comments: # true
       share: true
       related: true
+
+head_scripts:
+  - https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js
