--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 locale                   : "en-US"
 title                    : "아파트 실거래"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "아파트 실거래"
 description              : "스마트한 아파트 실거래 "
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : "https://aptnow.github.io/price/"
+baseurl                  : "https://aptnow.github.io/price"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -78,10 +78,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "AptNow(아파트 지금)"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "-Smart부동산"
+  location         : "Seoul"
   email            :
   links:
     - label: "Email"
@@ -265,5 +265,3 @@ defaults:
       share: true
       related: true
 
-head_scripts:
-  - https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js
