--- a/_config.yml
+++ b/_config.yml
@@ -236,3 +236,6 @@ defaults:
       comments: # true
       share: true
       related: true
+
+head_scripts:
+  - https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js
