--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 locale                   : "ko-KR"
 title                    : "아파트 실거래"
 title_separator          : "-"
